kube/server/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vantage6-server-backend
  namespace: vantage6-server
  labels:
    app: vantage6-server-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vantage6-server-backend
  template:
    metadata:
      labels:
        app: vantage6-server-backend
    spec:
      containers:
      - name: vantage6-server-backend
        image: harbor2.vantage6.ai/infrastructure/server:5.0.0a0
        ports:
        - containerPort: 7601
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        command: [
          "uwsgi", "--http", ":7601", "--gevent", "1000", "--http-websockets",
          "--master", "--callable", "app", "--disable-logging", "--wsgi-file",
          "/vantage6/vantage6-server/vantage6/server/wsgi.py", "--pyargv",
          "/mnt/config.yaml",
        ]
        volumeMounts:
        - name: config-file
          mountPath: /mnt/config.yaml
          subPath: config.yaml

      volumes:
      - name: config-file
        configMap:
          name: vantage6-server-config
