kube/server/server-database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-postgres
  namespace: vantage6-server
  labels:
    app: server-postgres
spec:
  selector:
    matchLabels:
      app: server-postgres
  template:
    metadata:
      labels:
        app: server-postgres
    spec:
      containers:
      - name: server-postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
