kube/server/store-database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-postgres
  namespace: vantage6-server
  labels:
    app: store-postgres
spec:
  selector:
    matchLabels:
      app: store-postgres
  template:
    metadata:
      labels:
        app: store-postgres
    spec:
      containers:
      - name: store-postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: store-postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres
      volumes:
      - name: store-postgres-storage
        persistentVolumeClaim:
          claimName: store-postgres-pvc
