kube/server/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: vantage6-server
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
