kube/server/rabbitmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: vantage6-server
spec:
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
