kube/server/server-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vantage6-server-backend-service
  namespace: vantage6-server
spec:
  selector:
    app: vantage6-server-backend
  ports:
    - protocol: TCP
      port: 80          # External port for the server
      targetPort: 7601  # Container port for the server
      name: vantage6-server-backend
  type: ClusterIP
  # sessionAffinity: ClientIP # does not work in wsl
