kube/server/server-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: vantage6-server
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: server-postgres
