kube/server/store-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: store-postgres-service
  namespace: vantage6-server
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: store-postgres
