kube/server/vantage6-server-deployment.yml
# This YAML file defines the deployment and service configurations for the Vantage6
# server backend and frontend components. The architecture includes a LoadBalancer for
# external access, an Ingress Controller for routing, and separate services for the
# backend and frontend.
#
# Architecture Overview:
# +-------------------+       +---------------------+       +-------------------+
# |   LoadBalancer    |------>|      Ingress        |------>|   Backend Service |
# | (External Access) |       | (Ingress Controller)|       |  Frontend Service |
# +-------------------+       +---------------------+       +-------------------+
#
# The LoadBalancer exposes the Ingress Controller to external traffic. The Ingress
# Controller manages routing rules and directs traffic to the appropriate service based
# on the request path or host. The backend and frontend services route traffic to their
# respective pods.
#
# Backend Service: Handles the server-side logic and API endpoints.
# Frontend Service: Handles the client-side application and user interface.
#
# This configuration ensures that the Vantage6 server components are properly deployed,
# exposed, and accessible within the Kubernetes cluster.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vantage6-server-backend
  labels:
    app: vantage6-server-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vantage6-server-backend
  template:
    metadata:
      labels:
        app: vantage6-server-backend
    spec:
      containers:
      - name: vantage6-server-backend
        image: harbor2.vantage6.ai/infrastructure/server:5.0.0a0
        ports:
        - containerPort: 7601
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        command: [
          "uwsgi", "--http", ":7601", "--gevent", "1000", "--http-websockets",
          "--master", "--callable", "app", "--disable-logging", "--wsgi-file",
          "/vantage6/vantage6-server/vantage6/server/wsgi.py", "--pyargv",
          "/mnt/config.yaml",
        ]
        volumeMounts:
        - name: config-file
          mountPath: /mnt/config.yaml
          subPath: config.yaml

      volumes:
      - name: config-file
        configMap:
          name: vantage6-server-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vantage6-server-frontend
  labels:
    app: vantage6-server-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vantage6-server-frontend
  template:
    metadata:
      labels:
        app: vantage6-server-frontend
    spec:
      containers:
      - name: vantage6-server-frontend
        image: harbor2.vantage6.ai/infrastructure/ui:5.0.0a0
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vantage6-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: vantage6-server-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vantage6-server-frontend-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vantage6-server-frontend-service
spec:
  selector:
    app: vantage6-server-frontend
  ports:
    - protocol: TCP
      port: 80          # External port for the UI
      targetPort: 80    # Container port for the UI
      name: vantage6-server-frontend
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: vantage6-server-backend-service
spec:
  selector:
    app: vantage6-server-backend
  ports:
    - protocol: TCP
      port: 80          # External port for the server
      targetPort: 7601  # Container port for the server
      name: vantage6-server-backend
  type: ClusterIP
